# publishers-applications

./: Makefile  README.rst  entry-points.txt  pyproject.toml  setup.cfg  setup.py
nagare/publishers/: application.py  application_publisher.py
src/nagare/publishers/: application.py  application_publisher.py
