[metadata]
name = nagare-publishers-application
author = Net-ng
author_email = alain.poirier@net-ng.com
description = Raw WSGI application publisher'
long_description = file: README.rst
long_description_content_type = text/x-rst
license = BSD
url = https://www.nagare.org
project_urls =
    Documentation = https://nagare.org/doc
    Source = https://github.com/nagareproject/publishers-application
    Tracker = https://github.com/nagareproject/publishers-application/issues

[options]
zip_safe = False
packages = find:
install_requires =
    nagare-server-http

[options.entry_points]
nagare.publishers =
    application = nagare.publishers.application_publisher:Publisher

[bdist_wheel]
universal = 1

[flake8]
ignore = E501
exclude =
	.git,
	.eggs,
	doc
